T1-473 Clean up callout component; fix spacing for buttons

--- a/src/client/components/molecules/callout/callout.scss
+++ b/src/client/components/molecules/callout/callout.scss
@@ -1,10 +1,20 @@
 .callout {
   background-color: white;
   border-top: 5px solid $sba-blue;
+  // TODO: DRY
   box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0.1);
   padding: 50px;
 }
 
-.noDecoration {
-  background-image: none;
+.buttons {
+  @include for-medium-up {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    > a:not(:last-child),
+    button:not(:last-child) {
+      margin-bottom: $small-spacing;
+    }
+  }
 }
